<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <TextView
        android:id="@+id/tvEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edad"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
        android:id="@+id/etEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edad"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/tvCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="120dp" />

    <EditText
        android:id="@+id/etCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/tvSexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sexo"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/etSexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSexo" />

    <TextView
        android:id="@+id/tvTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teléfono"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="116dp" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTelefono" />
</androidx.constraintlayout.widget.ConstraintLayout>